added the rest of the portfolio projects

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 Home Page
+<nav>
+  <ul>
+    <li>
+      <a href="dashboard/dashboard.html">Dashboard</a>
+    </li>
+    <li>
+      <a href="wheel-of-success/wheel-of-success.html">Wheel of Success</a>
+    </li>
+    <li>
+      <a href="gallery/gallery.html">Gallery</a>
+    </li>
+    <li>
+      <a href="circles/circles.html">Circles</a>
+    </li>
+    <li>
+      <a href="code-review-form/code-review-form.html">Code Review Form</a>
+    </li>
+  </ul>
+</nav>
